--- a/src/Styles/Project.css
+++ b/src/Styles/Project.css
@@ -5,10 +5,25 @@
   /* max-width: 45%; */
   width: 45%;
   margin: 2%;
-  box-shadow: 1px 1px 1px #888888;
+  box-shadow: 3px 3px 3px #888;
   overflow: hidden;
 }
 
+.blue .title, .blue button{
+  background-color: #2980b9;
+}
+
+.green .title, .green button{
+  background-color: #16a085;
+}
+
+.purple .title, .purple button{
+  background-color: #8e44ad;
+}
+
+.red .title, .red button{
+  background-color: #e74c3c;
+}
 
 .titleText{
   font-size: 24px;
@@ -107,6 +122,13 @@ a{
   /* display: inline-block; */
   width: 100%;
   /* height: 25%; */
-  background-color: #2980b9;
+  /* background-color: #2980b9; */
   color: white;
+}
+
+
+@media only screen and (max-width: 650px)  {
+  .project{
+    width: 95%;
+  }
 }
