--- a/src/Styles/ProjectWrap.css
+++ b/src/Styles/ProjectWrap.css
@@ -4,5 +4,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 100%;
+  width: 80%;
+}
+@media only screen and (max-width: 650px)  {
+  .project-flex{
+    width: 90%;
+  }
 }
