--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   background-color: #ecf0f1;
   width: 100%;
   height: 100%;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.5;
   margin: auto;
   font-weight: 300;
@@ -41,6 +41,8 @@ html, body{
 }
 
 .bolder{
-  font-size: 30px;
+  font-size: 40px;
   font-weight: 400;
+  display: inline;
+  border-bottom: 3px solid white;
 }
