--- a/src/Styles/Project.css
+++ b/src/Styles/Project.css
@@ -9,6 +9,12 @@
   overflow: hidden;
 }
 
+.tech p, .contentText p{
+  width: 80%;
+  margin: auto;
+  margin-top: 1em;
+  color: #333;
+}
 .blue .title, .blue button{
   background-color: #2980b9;
 }
@@ -26,6 +32,7 @@
 }
 
 .titleText{
+  display: inline-block;
   font-size: 24px;
   font-weight: 400;
   color: white;
@@ -33,6 +40,8 @@
 
 
 .flexWrapper{
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content:space-around;
 }
@@ -73,7 +82,7 @@ a{
   color: white;
   /* background-color: black; */
   position: relative;
-  top: 10%;
+  top: 4%;
 }
 
 .content{
@@ -114,7 +123,7 @@ a{
 }
 
 .title{
-  display: inline-block;
+  /* display: inline-block; */
   margin: 0;
   padding: 0;
   /* position: relative; */
