--- a/src/Styles/ProjectWrap.css
+++ b/src/Styles/ProjectWrap.css
@@ -1,6 +1,9 @@
+.project-wrap{
+  margin-top: 1em;
+}
 .project-flex{
   margin: auto;
-  margin-top: 2em;
+  margin-top: 1em;
   /* background-color: red; */
   display: flex;
   flex-wrap: wrap;
