--- a/src/Styles/Work.css
+++ b/src/Styles/Work.css
@@ -68,8 +68,8 @@
   color: white;
   border: 1px solid white;
   background-color: #16a085;
-  transition: color 1s;
-  transition: background-color 1s;
+  transition: color .7s;
+  transition: background-color .7s;
 }
 
 .Work button:hover{
