--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
   background-color: #ecf0f1;
   width: 100%;
   height: 100%;
-  font-size: 16px;
+  /* font-size: 16px; */
+  font-size: 18px;
   line-height: 1.5;
   margin: auto;
   font-weight: 300;
