--- a/src/Styles/ImageWithText.css
+++ b/src/Styles/ImageWithText.css
@@ -17,13 +17,14 @@
   height: 20em;
   display: inline-block;
   width: 100%;
-  filter: brightness(40%);
+  filter: brightness(50%);;  
   /* width: auto; */
 
 }
 
 .imageText p{
   color: white;
+  text-shadow: 2px 3px 2px rgba( 0, 0, 0, .6);
 }
 .imageText{
   /* background-color: dark-grey; */
